# pas_tasks

./: .gitignore  LICENSE  README  build.xml  requirements.txt  setup.cfg  setup.py
_developer/data/settings/: pas_tasks_daemon.json
data/database/postgresql_schema/Task/: schema_2.sql  schema_3.sql
data/database/sqlite_schema/Task/: schema_2.sql  schema_3.sql
data/settings/: pas_psd.xml
src/dNG/data/tasks/: abstract.py  abstract_persistent.py  abstract_persistent_proxy.py  database.py  database_proxy.py  database_task.py  database_task_context.py  memory.py  persistent.py  persistent_proxy.py
src/dNG/database/instances/: task.py
src/dNG/pas/data/tasks/: abstract.py  database.py  database_proxy.py  database_task.py  database_task_context.py  memory.py
src/dNG/pas/tasks/: abstract.py  abstract_hook.py  abstract_lrt_hook.py  callback.py
src/dNG/plugins/database/: pas_tasks.py
src/dNG/plugins/tasks/: pas_tasks.py
src/dNG/tasks/: abstract.py  abstract_hook.py  abstract_lrt_hook.py  callback.py  database_lrt_hook.py  persistent_lrt_hook.py
src/pas_tasks/: __init__.py  __main__.py  abstract.py  abstract_persistent.py  abstract_persistent_proxy.py  database.py  database_task_context.py  memory.py  persistent.py  persistent_proxy.py
src/pas_tasks/dpt_plugins/database/: pas_hooks.py
src/pas_tasks/dpt_plugins/tasks/: pas_hooks.py
src/pas_tasks/instances/: __init__.py  task.py
src/pas_tasks/orm/: task.py
src/pas_tasks/tasks/: __init__.py  abstract.py  abstract_hook.py  abstract_lrt_hook.py  callback.py  database_lrt_hook.py  persistent_lrt_hook.py
(+7 files in other folders)
