[metadata]
name = pas-tasks
description = Python Application Services: Tasks scheduler
long_description = "pas-tasks" are used to schedule in-memory or database based tasks.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = GPL-2.0+
url = https://www.direct-netware.de/redirect?pas;tasks
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
